# zenn-content

./: .claude.json  .env.example  .gitignore  .textlintrc.json  AGENTS.md  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.claude/: settings.json
articles/: ai-voice-cover-rvc-demucs-optuna.md  amivoice-claude-asr-correction.md
scripts/: codex-review.sh  setup-claude.sh  setup-git-hooks.sh
scripts/git-hooks/: pre-commit
